test/tests/errors/error-file-get-end-of-file2.sm
// true
// true
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    bf = 1;
    put(f);
    reset(f);
    get(f);
    get(f);
}